simple code additions

--- a/public/account.html
+++ b/public/account.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login Page</title>
+    <title>New Account</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3 col-md-offset-5">
-                <h3>Login to Chat</h3>
+                <h3>Create New Account</h3>
                 <br/>
 
                 <form>
@@ -24,7 +24,7 @@
                     <label>Password</label>
                     <input type="text" class="form-control" placeholder="Enter your password...">
                     <div>
-                        <a href="#">Don't have an account? Create one here.</a>
+                        <a href="#">Already have an account? Login here.</a>
                     </div>
                     <br/>
                     <input type="submit" class="btn btn-primary">
