--- a/public/account.html
+++ b/public/account.html
@@ -22,7 +22,7 @@
                     <label>Email</label>
                     <input id="email" type="text" class="form-control" name="email" placeholder="Enter your email...">
                     <label>Password</label>
-                    <input id="password" type="text" class="form-control" placeholder="Enter your password...">
+                    <input id="password" type="password" class="form-control" placeholder="Enter your password...">
                     <div>
                         <a href="#">Already have an account? Login here.</a>
                     </div>
