--- a/public/account.html
+++ b/public/account.html
@@ -24,7 +24,7 @@
                     <label>Password</label>
                     <input id="password" type="password" class="form-control" placeholder="Enter your password...">
                     <div>
-                        <a href="#">Already have an account? Login here.</a>
+                        <a href="login.html">Already have an account? Login here.</a>
                     </div>
                     <br/>
                     <input type="submit" class="btn btn-primary">
