--- a/public/login.html
+++ b/public/login.html
@@ -18,13 +18,13 @@
                 <h3>Login to Chat</h3>
                 <br/>
 
-                <form>
+                <form id="user-login-form">
                     <label>Email</label>
-                    <input type="text" class="form-control" name="email" placeholder="Enter your email...">
+                    <input id="email" type="text" class="form-control" name="email" placeholder="Enter your email...">
                     <label>Password</label>
-                    <input type="text" class="form-control" placeholder="Enter your password...">
+                    <input id="password" type="password" class="form-control" placeholder="Enter your password...">
                     <div>
-                        <a href="#">Don't have an account? Create one here.</a>
+                        <a href="account.html">Don't have an account? Create one here.</a>
                     </div>
                     <br/>
                     <input type="submit" class="btn btn-primary">
@@ -37,8 +37,14 @@
         </div>
     </div>
 
+    <!-- jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/core-js/2.1.4/core.min.js"></script>
     <script src="//unpkg.com/@feathersjs/client@^3.0.0/dist/feathers.js"></script>
     <script src="//unpkg.com/socket.io-client@1.7.3/dist/socket.io.js"></script>
+    
+    <!-- custom script -->
+    <script src="./js/login.js"></script>
 </body>
 </html>
