--- a/public/index.html
+++ b/public/index.html
@@ -54,42 +54,27 @@
 
             <!-- right content area -->
             <div class="col-md-9 margin-top main-border">
-                <div class="media">
-                    <div class="media-left">
-                        <a href="#">
-                            <img src="https://www.iconexperience.com/_img/o_collection_png/green_dark_grey/512x512/plain/user.png" alt="64x64 user image" class="media-object" style="width: 64px; height: 64px;">
-                        </a>
-                    </div>
-                    <div class="media-body">
-                        <div class="pull-right">
-                            <span class="delete-comment" title="Delete Comment?"><i class="fa fa-times" aria-hidden="true"></i></span>
+                <div id="chat-area">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img src="https://www.iconexperience.com/_img/o_collection_png/green_dark_grey/512x512/plain/user.png" alt="64x64 user image" class="media-object" style="width: 64px; height: 64px;">
+                            </a>
                         </div>
-                        <h4 class="media-heading">John Smith</h4>
-                        <span class="comment-date">03-04-2016 10:43am</span>
-                        <br><br>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga corrupti labore odit nisi repellat, eligendi vel in maxime vero fugiat modi, distinctio ipsa cum animi esse inventore ut quis eum.
-                    </div>
-                </div>
-
-                <div class="media">
-                    <div class="media-left">
-                        <a href="#">
-                            <img src="https://www.iconexperience.com/_img/o_collection_png/green_dark_grey/512x512/plain/user.png" alt="64x64 user image" class="media-object" style="width: 64px; height: 64px;">
-                        </a>
-                    </div>
-                    <div class="media-body">
-                        <div class="pull-right">
-                            <span class="delete-comment" title="Delete Comment?"><i class="fa fa-times" aria-hidden="true"></i></span>
+                        <div class="media-body">
+                            <div class="pull-right">
+                                <span class="delete-comment" title="Delete Comment?"><i class="fa fa-times" aria-hidden="true"></i></span>
+                            </div>
+                            <h4 class="media-heading">Chat Bot</h4>
+                            <span class="comment-date">03-04-2016 10:43am</span>
+                            <br><br>
+                            Welcome to the chat area!
                         </div>
-                        <h4 class="media-heading">John Smith</h4>
-                        <span class="comment-date">03-04-2016 10:43am</span>
-                        <br><br>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga corrupti labore odit nisi repellat, eligendi vel in maxime vero fugiat modi, distinctio ipsa cum animi esse inventore ut quis eum.
                     </div>
                 </div>
                 <div class="margin-top">
-                    <form>
-                        <textarea class="form-control" rows="3" placeholder="Enter Message..."></textarea>
+                    <form id="submit-message-form">
+                        <textarea id="msg-text" class="form-control" rows="3" placeholder="Enter Message..."></textarea>
                         <button class="btn btn-primary pull-right margin-top">Submit</button>
                     </form>
                 </div>
